# hydra-net

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/synthetic/: X_synthetic.npy  y_synthetic.npy
docs/: ARCHITECTURE.md  DATASETS.md  PAPER_OUTLINE.md
models/: stage1_triage.json
notebooks/: 01_stage1_dronerf_colab.ipynb  02_stage2_antiuav_colab.ipynb  03_stage3_swarm_colab.ipynb  04_end_to_end_benchmark.ipynb
results/: stage1_distance_results.json  stage1_latency.json  stage1_synthetic.json
results/docs/: STAGE1_RESULTS_JOURNAL.md
scripts/: benchmark_latency.py  benchmark_stage1_only.py  generate_synthetic_data.py  quickstart_demo.py  train_stage1.py
src/hydra_net/: __init__.py  cascade.py
src/hydra_net/explainability/: __init__.py  attribution.py
src/hydra_net/fusion/: __init__.py  async_fusion.py
src/hydra_net/serving/: __init__.py  api.py
src/hydra_net/stage1/: __init__.py  features.py  triage.py
src/hydra_net/stage2/: __init__.py  transformer.py
src/hydra_net/stage3/: __init__.py  swarm_gnn.py
tests/: conftest.py  test_explainability.py  test_stage1.py
