[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-net"
version = "0.1.0a0"
description = "Cascaded multimodal counter-UAV detection with confidence-gated early exit"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Khaled Metwalie"}]
keywords = ["counter-uav", "anti-drone", "multimodal", "machine-learning", "cascade", "explainability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
]
audio = ["librosa>=0.10.0", "soundfile>=0.12.0"]
serving = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "pydantic>=2.4.0"]
explain = ["shap>=0.43.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
all = ["hydra-net[deep,audio,serving,explain,dev]"]

[project.urls]
Homepage = "https://github.com/khaled-metwalie/hydra-net"
Documentation = "https://github.com/khaled-metwalie/hydra-net/tree/main/docs"
Repository = "https://github.com/khaled-metwalie/hydra-net"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
